# backend/app/handlers/mappa_progressoes_handler.go
@@ -1,6 +1,7 @@
 package handlers
 
 import (
+	"fmt"
 	"strings"
 
 	"github.com/escoteirando/mappa-proxy/backend/domain/responses"
@@ -12,6 +13,7 @@ import (
 // @Description  Lista de progressões do ramo
 // @Tags         mappa-proxy
 // @Accept       json
+// @Param Authorization header string true "Authorization"
 // @Param ramo path string true "Ramo" Enums(L,E,S,P)
 // @Produce      json
 // @Success      200  {object}  responses.MappaProgressoesResponse
@@ -19,8 +21,13 @@ import (
 // @Router       /mappa/progressoes/{ramo} [get]
 func MappaProgressoesHandler(c *fiber.Ctx) error {
 	// /mappa/progressoes/:ramo
+	
+	ramo := strings.ReplaceAll(c.Params("ramo", ""), "%22", "")
+	if ramo == "" {
+		return reply_error(c, 400, "mAPPa request error", fmt.Errorf("Invalid ramo"))
+	}
+
 	contextData := getUserContext(c)
-	ramo := strings.ReplaceAll(c.Params("ramo"), "%22", "")
 	progressoes, err := contextData.MappaService.GetProgressoes(ramo)
 	if err != nil {
 		return reply_error(c, 404, "Falha ao obter progressoes", err)
