# docs/swagger.json
@@ -182,6 +182,13 @@
                 "summary": "MappaProgressoes handler",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "enum": [
                             "L",
                             "E",
